2001-02-14  Ramiro Estrugo  <ramiro@eazel.com>

	* nautilus.spec.in:
	Require 'freetype >= 2.0' not 'freetype2 >= 2.0'
	
2001-02-14  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: JP Rosevear <jpr@ximian.com>

	* libnautilus-extensions/nautilus-viewport.c:
	(nautilus_viewport_initialize), (nautilus_viewport_realize),
	(nautilus_viewport_set_is_smooth),
	(nautilus_viewport_get_is_smooth),
	(nautilus_viewport_set_never_smooth):
	Make sure the "never_smooth" and "is_smooth" attributes work as
	advertised.  Make the "never_smooth" attribute default to TRUE,
	since that makes it work with more gtk widgets.
	
	* src/nautilus-property-browser.c:
	(nautilus_property_browser_initialize),
	(nautilus_property_browser_update_contents):
	Set the "never_smooth" attribute of the viewports to FALSE so that
	the can be smooth.
	
2001-02-13  Ramiro Estrugo  <ramiro@eazel.com>

	* test/test-nautilus-glyph.c: (main):
	* test/test-nautilus-label-simple.c: (main):
	Two very tiny tweaks to help debug clipping bugs.
	
2001-02-13  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Rebecca Schulman  <rebecka@eazel.com>

	* libnautilus-extensions/nautilus-gdk-pixbuf-extensions.c:
	(nautilus_gdk_pixbuf_new_from_pixbuf_sub_area),
	(nautilus_gdk_pixbuf_new_from_existing_buffer):
	* libnautilus-extensions/nautilus-gdk-pixbuf-extensions.h:
	New function to create a pixbuf from an existing buffer and clip
	area.
	
2001-02-13  Robey Pointer  <robey@eazel.com>

	* Makefile.am:

	Add nautilus-installer to EXTRA_DIST to fix tinderbox breakage.
	
2001-02-13  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Seth Nickell <seth@eazel.com>

	Fix bugzilla.eazel.com bug 6416, that the indexing
	information dialog should not be shown if indexing is
	disabled or blocked.

	* src/file-manager/nautilus-indexing-info.c: (dialog_close_cover),
	(show_index_progress_dialog), (show_reindex_request_dialog),
	(show_indexing_info_dialog):
	Add new dialogs for the case when indexing is off,