@@ -1,5 +1,12 @@
 2001-02-14  Ramiro Estrugo  <ramiro@eazel.com>
 
+	* libnautilus-extensions/nautilus-viewport.c:
+	(nautilus_viewport_set_never_smooth):
+	Fix a very dumb typo with the last commit.  Thanks for 
+	JP Rosevear <jpr@ximian.com> for spotting this.
+	
+2001-02-14  Ramiro Estrugo  <ramiro@eazel.com>
+
 	* nautilus.spec.in:
 	Require 'freetype >= 2.0' not 'freetype2 >= 2.0'
 	
